[tool.poetry]
name = "songemitter"
version = "0.1.0"
description = ""
authors = ["Ben Quigley <ben.quigley.all@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pscript = "^0.7.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
